--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
-rootProject.name = 'CommerceCore'
+rootProject.name = "CommerceCore"
 
-include 'order-service'
-include 'point-service'
-include 'product-service'
-include 'user-service'
+include("order-service")
+include("pointservice")
+include("product-service")
+include("userservice")
